--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+#container {
+    animation: hover 0.4s linear forwards;
+    overflow: hidden;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@keyframes hover {
+    0% {
+        height: 0;
+        display: none;
+    }
 
-* {
-  box-sizing: border-box;
-}
+    99% {
+        height: 160px;
+        display: unset;
+    }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+    100% {
+        height: max-content;
+        display: unset;
+    }
 }
